
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tids ;
typedef int * pthread_t ;


 int AF_SP_RAW ;
 int MAXWORKERS ;
 int NN_REP ;
 int fprintf (int ,char*,char*) ;
 int memset (int **,int ,int) ;
 scalar_t__ nn_bind (int,char const*) ;
 int nn_close (int) ;
 int nn_errno () ;
 int nn_socket (int ,int ) ;
 char* nn_strerror (int ) ;
 int pthread_create (int **,int *,int ,void*) ;
 int pthread_join (int *,int *) ;
 int stderr ;
 char* strerror (int) ;
 int worker ;

int server(const char *url)
{
    int fd;
    int i;
    pthread_t tids [MAXWORKERS];
    int rc;


    fd = nn_socket(AF_SP_RAW, NN_REP);
    if (fd < 0) {
        fprintf (stderr, "nn_socket: %s\n", nn_strerror (nn_errno ()));
        return (-1);
    }





    if (nn_bind (fd, url) < 0) {
        fprintf (stderr, "nn_bind: %s\n", nn_strerror (nn_errno ()));
        nn_close (fd);
        return (-1);
    }

    memset (tids, 0, sizeof (tids));


    for (i = 0; i < MAXWORKERS; i++) {
        rc = pthread_create (&tids[i], ((void*)0), worker, (void *)(intptr_t)fd);
        if (rc < 0) {
            fprintf (stderr, "pthread_create: %s\n", strerror (rc));
            nn_close (fd);
            break;
        }
    }


    for (i = 0; i < MAXWORKERS; i++) {
        if (tids[i] != ((void*)0)) {
            pthread_join (tids[i], ((void*)0));
        }
    }
    return (-1);
}
